styles/style.css
.page {
  margin: 0 auto;
  background-image: var(--background-image);
  background-size: cover;
  background-position: top center;
  background-attachment: fixed;
}

.link {
  text-shadow: 1px 1px 0 var(--accent-color);
  display: inline-block;
}

.link:hover {
  border-bottom: 1px solid var(--main-text-color);
}

.link:focus {
  border: 1px solid var(--main-text-color);
}

.header {
  display: grid;
  grid-template-rows: 1fr min-content 1fr;
  height: 100vh;
  min-height: 640px;
  padding-right: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
}

.cover {
  display: grid;
  padding: clamp(10px, 0.0286rem + 2.5445vw, 20px);
  min-block-size: 100vh;
}

.decorated-zone {
  position: relative;
}

.decorated-zone::before {
  content: "";
  position: absolute;
  width: 25px;
  height: 25px;
  border-right: 1px solid var(--accent-color);
  border-top: 1px solid var(--accent-color);
  top: 20px;
  right: 20px;
}

.decorated-zone::after {
  content: "";
  position: absolute;
  width: 25px;
  height: 25px;
  border-left: 1px solid var(--accent-color);
  border-bottom: 1px solid var(--accent-color);
  bottom: 20px;
  left: 20px;
}

@media (width < 376px) {
  .decorated-zone::after {
    bottom: 10px;
    left: 10px;
  }
  .decorated-zone::before {
    top: 10px;
    right: 10px;
  }
}

.header__theme-menu-button {
  color: var(--nav-color);
  padding: 0 13px;
  background-color: transparent;
  font-size: 18px;
  border: none;
  cursor: pointer;
  text-transform: lowercase;
  appearance: none;
}

.header__theme-menu-button:hover {
  outline: 1px solid var(--button-hover-border-color);
}

.header__theme-menu-button:focus {
  border-bottom: 1px solid var(--accent-color);
}

.header__theme-menu-button_active {
  border: 1px solid currentColor;
}

.header__theme-menu-list {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  list-style-type: none;
}

.header__rec {
  position: absolute;
  visibility: var(--visibility, visible);
  top: 25px;
  right: 35px;
}

.header__rec:before {
  content: "REC";
  display: inline-block;
  color: var(--accent-color, #ff0070);
  line-height: 24px;
}

.header__rec:after {
  content: "";
  display: inline-block;
  border-radius: 50%;
  box-shadow: 0 0 2px 2px var(--accent-color, #ff0070);
  background: var(--accent-color, #ff0070);
  width: 9px;
  height: 9px;
  margin-left: 10px;
}

.header__logo {
  position: relative; 
  right: 20px;
  font-size: 157px;
  color: var(--header-logo-color);
  text-shadow: 4px 4px 0px var(--shadow-color);
  text-transform: lowercase;
  font-weight: 700;
  line-height: 82.5%;
}

@media (width < 1024px) {
  .header__logo {
    text-shadow: 4px 4px 0px var(--shadow-color-low-resolution);
  }
}

.header__text-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.header__text {
  width: 50%;
  align-self: center;
  justify-self: end;
  background-color: var(--section-heading-color);
  font-size: 18px;
  font-style: normal;
  font-weight: 700;
  line-height: 23.4px;
}

@media (width < 376px) {
  .header__text {
    width: 100%;
  }
}

.title-decor {
  color: var(--title-decor-color);
  background-color: var(--section-heading-color);
  font-family: 'IBM Plex Mono', sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 700;
  line-height: 23.4px;
}

.text-decor {
  font-family: 'IBM Plex Mono', sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 23.4px; 
  color: var(--main-text-color);
}

@media (width < 1024px) {
  .header__theme-menu {
    align-self: center;
    justify-self: end;
  }

  .header__theme-menu-list {
    flex-direction: column;
    justify-content: center;
    align-items: end;
    gap: 13px;
  }

  .header__logo {
    font-size: 120px;
  }
}

@media (width < 376px) {
  .header {
    padding: 10px;
  }
  
  .header__logo {
    font-size: 116px;
  }

  .header__text {
    align-self: center;
    justify-self: center;
  }
}

/* Секция "Почему" */

.section-why {
  display: grid;
  grid-template-columns: 1fr 2fr;
  padding: 0 20px;
  margin-top: 60px;
  gap: 10px;
}

.section-why__title {
  font-size: 18px;
  line-height: 23.4px;
  font-weight: 700;
  color: var(--nav-color);
}

.section-why__list {
  display: grid;
  gap: 20px;
  font-size: 18px;
  font-weight: 700;
  line-height: 23.4px;
}

.section-why__list-item {
  display: grid;
  gap: 10px;
}

@media (width < 376px) {
  .section-why {
    grid-template-columns: 1fr;
    gap: 20px;
    padding-left: 10px;
    padding-right: 10px;
    margin-top: 40px;
  }
}

/* Секция "Что" */

.section-what {
  display: grid;
  grid-template-rows: min-content min-content;
  grid-template-columns: 1fr 2fr;
  gap: 20px;
  padding: 0 20px;
  margin-top: 80px;
}

.section-what__title {
  grid-row: 1;
  font-size: 18px;
  line-height: 23.4px;
  font-weight: 700;
  color: var(--nav-color);
}

.section-what__list {
  grid-row: 2;
  grid-column: 1 / span 3;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 20px;
}

.section-what__list-item {
  display: grid;
  align-self: flex-start;
  gap: 10px;
}

@media (width < 1024px) {
  .section-what__list {
    grid-template-columns: 1fr;
    
  }
}

@media (width < 376px) {
  .section-what {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(min-content, 3);
    margin-top: 50px;
    padding: 0 10px;
  }
}

/* Секция "Kак" */

.section-how {
  display: grid;
  grid-template-columns: 1fr 2fr;
  margin-top: 80px;
  padding: 0 20px;
  gap: 10px;
}

.section-how__title {
  font-family: 'IBM Plex Mono', sans-serif;
  font-size: 18px;
  line-height: 23.4px;
  font-weight: 700;
  color: var(--nav-color);
}

.section-how__right-part {
  display: grid;
  gap: 20px;
}

.section-how__list {
  display: grid;
  gap: 20px;
}

.section-how__list-item {
  display: grid;
  gap: 10px;
}

.section-how__list-title {
  font-weight: 400;
}

@media (width < 376px) {
  .section-how {
    gap: 20px;
    grid-template-columns: 1fr;
    padding-left: 10px;
    padding-right: 10px;
    margin-top: 50px;
  }
}

/* Cекция с картинками */

.section-images {
  display: grid;
  grid-template-columns: 1fr;
  gap: 20px;
  padding: 0 20px;
  margin-top: 80px;
}

.section-images__item {
  object-fit: cover;
  object-position: center;
  max-width: 100%;
  height: 100%;
}

.section-images__gallery {
  display: grid;
  grid-template-areas:
    "first first second"
    "third fourth second"
    "third fifth fifth";
  grid-template-columns: repeat(1fr, 3);
  gap: 20px;
}

@media (min-width: 376px) {
  .section-images__item:first-of-type {
    grid-area: first;
  }

  .section-images__item:nth-of-type(2) {
    grid-area: second;
  }

  .section-images__item:nth-of-type(3) {
    grid-area: third;
  }

  .section-images__item:last-of-type {
    grid-area: fifth;
  }

}

@media (width < 376px) {
  .section-images {
    margin-top: 50px;
    padding: 0 10px;
    gap: 10px;
  }

  .section-images__gallery {
    grid-template-areas: 
      "first"
      "second"
      "third"
      "fourth"
      "fifth";
    grid-template-columns: 1fr;
    gap: 10px;
  }
}

/* FOOTER */

.footer {
  display: grid;
  justify-content: center;
  align-items: center;
  height: 100vh;
  min-height: 640px;
  padding: 20px;
  margin-top: 60px;
}

.footer__logo {
  position: relative;
  right: 20px;
  color: var(--footer-logo-color);
  text-shadow: 2px 2px 0 var(--shadow-color);
  font-size: 157px;
  line-height: 82.5%;
  font-weight: 700;
}

@media (width < 1024px) {
  .footer__logo {
    font-size: 120px;
    text-shadow: 2px 2px 0 var(--shadow-color-low-resolution);
  }
}

@media (width < 376px) {

  .footer {
    padding: 0 10px;
  }

  .footer__logo {
    margin-top: 40px;
    font-size: 116px;
  }
}

